Don't use title content in size calculations
Make height configurable instead

This prevents distracting screen flashing and seems to work fine
for larger glyphs as well (Tested with Japanese).

squashed: Free layout and buffer
squashed: pass in markup information

--- a/sway/meson.build
+++ b/sway/meson.build
@@ -111,6 +111,7 @@ sway_sources = files(
 	'commands/title_align.c',
 	'commands/title_format.c',
 	'commands/titlebar_border_thickness.c',
+	'commands/titlebar_max_text_height.c',
 	'commands/titlebar_padding.c',
 	'commands/unmark.c',
 	'commands/urgent.c',
